Added Acceptance Test for Create Department Validation Errors

--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -37,3 +37,7 @@ body {
     width: 600px;
     min-height: 200px;
 }
+
+.borderLessPanelGrid tr, .borderLessPanelGrid td {
+    border: none !important;
+}
