--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -18,7 +18,6 @@ body {
 
 .mainPanel {
     border: none;
-    width: 900px;
 }
 
 .loginPanel {
@@ -40,4 +39,9 @@ body {
 
 .borderLessPanelGrid tr, .borderLessPanelGrid td {
     border: none !important;
+}
+
+.menuPanel {
+    width: 180px;
+    min-height: 600px;
 }
