--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -58,3 +58,15 @@ body {
 .holidayCalendarPanel {
     width: 600px;
 }
+
+.holidayAwaitingAuth {
+    background: gold;
+}
+
+.holidayAuth {
+    background: green;
+}
+
+.holidayDeclined {
+    background: red;
+}
