--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-size: 75% !important;
+    background: #0e2c54;
 }
 
 .ui-widget,.ui-widget-header,.ui-widget-content,.ui-widget-header .ui-widget-header,.ui-widget-content .ui-widget-content,.ui-widget input,.ui-widget select,.ui-widget textarea,.ui-widget button
@@ -18,6 +19,7 @@ body {
 
 .mainPanel {
     border: none;
+    background: #0e2c54;
 }
 
 .loginPanel {
