Added Holiday Request Panel

--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -62,16 +62,17 @@ body {
 }
 
 .holidayRequestPanel {
-    width: 300px;
+    width: 350px;
     min-height: 500px;
 }
 
 .requestNewHolidayPanel {
-    width: 260px;
+    width: 315px;
 }
 
 .requestHistoryPanel {
-    width: 260px;
+    width: 315px;
+    min-height: 250px;
 }
 
 .holidayCalendarPanel {
