Added Holiday Request Panel

--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -93,6 +93,11 @@ body {
     border: none !important;
 }
 
+.pendingRequestPanel {
+    width: 500px;
+    min-height: 500px;
+}
+
 .requestNewHolidayPanel {
     width: 220px;
 }
