Added Employee Stats Panel

--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -198,6 +198,14 @@ body {
     width:5px;
 }
 
+.authorisedAbsenceChart {
+    height: 200px;
+}
+
+.unAuthorisedAbsenceChart {
+    height: 200px;
+}
+
 td .holidayUsed{
 
 }
