Added Department Stats Panel

--- a/absence-tracker/src/main/webapp/resources/css/style.css
+++ b/absence-tracker/src/main/webapp/resources/css/style.css
@@ -91,6 +91,10 @@ body {
     width: 300px;
 }
 
+.empHolidayAllowanceDetailsPie {
+    width: 290px;
+}
+
 .jqplot-series-canvas {
     background:#ffffff;
 }
